main.tf
resource "aws_vpc" "main" {
  cidr_block           = var.vpc_cidr
  enable_dns_hostnames = true
  enable_dns_support   = true

  tags = {
    Name    = "Terraform and AWS Demo VPC"
    Project = var.project_tag_name
  }
}
# -----------------------------------------------------------------
# -Two public subnets for HA
# -public1: app load balancer and NAT gateway
# -public2: app load balancer
# -these are the only things that need to be in the public
# -NAT gateway allows private subnet resources to get out to internet

resource "aws_subnet" "public1" {
  vpc_id            = aws_vpc.main.id
  cidr_block        = var.public1_subnet_cidr
  availability_zone = "${var.project_region}a"
  tags = {
    Name    = "Public Subnet 1"
    Project = var.project_tag_name
  }
}

resource "aws_subnet" "public2" {
  vpc_id            = aws_vpc.main.id
  cidr_block        = var.public2_subnet_cidr
  availability_zone = "${var.project_region}b"
  tags = {
    Name    = "Public Subnet 2"
    Project = var.project_tag_name
  }
}
# -----------------------------------------------------------------
# -2 private subnets for HA
# -private1: EC2 app server(s), possibly RDS, possibly fargate  tasks
# -private2: EC2 app server(s), possibly fargate  tasks

resource "aws_subnet" "private1" {
  vpc_id            = aws_vpc.main.id
  cidr_block        = var.private1_subnet_cidr
  availability_zone = "${var.project_region}a"
  tags = {
    Name    = "Private Subnet 1"
    Project = var.project_tag_name
  }
}

resource "aws_subnet" "private2" {
  vpc_id            = aws_vpc.main.id
  cidr_block        = var.private2_subnet_cidr
  availability_zone = "${var.project_region}b"
  tags = {
    Name    = "Private Subnet 2"
    Project = var.project_tag_name
  }
}

# -----------------------------------------------------------------
# -attaches to the VPC itself

resource "aws_internet_gateway" "gateway" {
  vpc_id = aws_vpc.main.id
  tags = {
    Name    = "Demo Project Internet Gateway"
    Project = var.project_tag_name
  }
}
# -----------------------------------------------------------------
resource "aws_route_table" "public_rt" {
  vpc_id = aws_vpc.main.id

  tags = {
    Name    = "Demo Public Route Table"
    Project = var.project_tag_name
  }
}

#any traffic going anywhere on the internet, send it to the internet gateway
resource "aws_route" "public_route" {
  route_table_id         = aws_route_table.public_rt.id
  destination_cidr_block = "0.0.0.0/0"
  gateway_id             = aws_internet_gateway.gateway.id
}

# -----------------------------------------------------------------
# - these attach the route tables to your public subnets
resource "aws_route_table_association" "public1" {
  subnet_id      = aws_subnet.public1.id
  route_table_id = aws_route_table.public_rt.id
}

resource "aws_route_table_association" "public2" {
  subnet_id      = aws_subnet.public2.id
  route_table_id = aws_route_table.public_rt.id
}

# -----------------------------------------------------------------
# - creates the public ip address
resource "aws_eip" "nat_eip" {
  tags = {
    Name    = "Project NAT EIP"
    Project = var.project_tag_name
  }
}

# -----------------------------------------------------------------
# - creates the NAT gateway and attaches it to public1 subnet
resource "aws_nat_gateway" "nat_gateway" {
  allocation_id = aws_eip.nat_eip.allocation_id
  subnet_id     = aws_subnet.public1.id

  tags = {
    Name    = "Project Nat Gateway"
    Project = var.project_tag_name
  }
}

# -----------------------------------------------------------------
# -creates the private route table
resource "aws_route_table" "private_rt" {
  vpc_id = aws_vpc.main.id

  tags = {
    Name    = "Demo Private Route Table"
    Project = var.project_tag_name
  }
}

# -----------------------------------------------------------------
# -for any traffic heading to the internet, send it to the NAT gateway
resource "aws_route" "private_route" {
  route_table_id         = aws_route_table.private_rt.id
  destination_cidr_block = "0.0.0.0/0"
  nat_gateway_id         = aws_nat_gateway.nat_gateway.id
}

# -----------------------------------------------------------------
# -associating the route tables with the private subnets
resource "aws_route_table_association" "private1" {
  subnet_id      = aws_subnet.private1.id
  route_table_id = aws_route_table.private_rt.id
}

resource "aws_route_table_association" "private2" {
  subnet_id      = aws_subnet.private2.id
  route_table_id = aws_route_table.private_rt.id
}

# -----------------------------------------------------------------
# -----------------------------------------------------------------
# -----------------------------------------------------------------
# -----------------------------------------------------------------
# - defining the security groups

resource "aws_security_group" "public_entry" {
  name   = "Public_Entry"
  vpc_id = aws_vpc.main.id

  tags = {
    Name    = "Public_Entry"
    Project = var.project_tag_name
  }
}

resource "aws_security_group" "app_servers" {
  name   = "App_Servers"
  vpc_id = aws_vpc.main.id

  tags = {
    Name    = "App_Servers"
    Project = var.project_tag_name
  }
}

resource "aws_security_group" "database" {
  name   = "RDS"
  vpc_id = aws_vpc.main.id

  tags = {
    Name    = "RDS"
    Project = var.project_tag_name
  }
}

resource "aws_security_group" "background_workers" {
  name   = "Background_Workers"
  vpc_id = aws_vpc.main.id

  tags = {
    Name    = "Background_Workers"
    Project = var.project_tag_name
  }
}

# -----------------------------------------------------------------
# -----------------------------------------------------------------
# this rule allows internet traffic in to public_entry
resource "aws_security_group_rule" "public_entry_http" {
  type              = "ingress"
  security_group_id = aws_security_group.public_entry.id
  from_port         = 80
  to_port           = 80
  protocol          = "tcp"
  cidr_blocks       = ["0.0.0.0/0"]

}

# this rule allows internet traffic in to public_entry
resource "aws_security_group_rule" "public_entry_https" {
  type              = "ingress"
  security_group_id = aws_security_group.public_entry.id
  from_port         = 443
  to_port           = 443
  protocol          = "tcp"
  cidr_blocks       = ["0.0.0.0/0"]
}

# this rule allows public_entry to communicate with app_servers
resource "aws_security_group_rule" "public_entry_to_app" {
  type                     = "egress"
  security_group_id        = aws_security_group.public_entry.id
  from_port                = 0
  to_port                  = 0
  protocol                 = "-1"
  source_security_group_id = aws_security_group.app_servers.id
}
# -----------------------------------------------------------------
# -----------------------------------------------------------------
# this rule allows app_servers to communicate with public_entry
resource "aws_security_group_rule" "app_to_public_entry" {
  type                     = "ingress"
  security_group_id        = aws_security_group.app_servers.id
  from_port                = 3000
  to_port                  = 3000
  protocol                 = "tcp"
  source_security_group_id = aws_security_group.public_entry.id
}

# this rule allows app_servers to communicate with database
resource "aws_security_group_rule" "app_to_database" {
  type                     = "egress"
  security_group_id        = aws_security_group.app_servers.id
  from_port                = 0
  to_port                  = 0
  protocol                 = "-1"
  source_security_group_id = aws_security_group.database.id
}

# this rule allows app_servers to communicate with background_workers
resource "aws_security_group_rule" "app_to_workers" {
  type                     = "egress"
  security_group_id        = aws_security_group.app_servers.id
  from_port                = 0
  to_port                  = 0
  protocol                 = "-1"
  source_security_group_id = aws_security_group.background_workers.id
}

# this rule allows app_servers out to internet via NAT gateway
resource "aws_security_group_rule" "app_to_external" {
  type              = "egress"
  security_group_id = aws_security_group.app_servers.id
  from_port         = 0
  to_port           = 0
  protocol          = "-1"
  cidr_blocks       = ["0.0.0.0/0"]
}
# -----------------------------------------------------------------
# -----------------------------------------------------------------
# this rule allows database to accept traffic from app_servers
resource "aws_security_group_rule" "from_app_to_database" {
  type                     = "ingress"
  security_group_id        = aws_security_group.database.id
  from_port                = 0
  to_port                  = 0
  protocol                 = "-1"
  source_security_group_id = aws_security_group.app_servers.id
}

# this rule allows database to accept traffic from background_workers
resource "aws_security_group_rule" "from_workers_to_database" {
  type                     = "ingress"
  security_group_id        = aws_security_group.database.id
  from_port                = 0
  to_port                  = 0
  protocol                 = "-1"
  source_security_group_id = aws_security_group.background_workers.id
}

#placeholder for background_worker/storage rule

# --------------------------------------------------------------------
# --------------------------------------------------------------------
# --------------------------------------------------------------------
# --------------------------S3 Bucket---------------------------------
resource "aws_s3_bucket" "project_bucket" {
  bucket = "chrislw324demoprojectbucket"
  tags = {
    Name    = "Project_Bucket"
    Project = var.project_tag_name
  }
}

resource "aws_s3_bucket_public_access_block" "project_bucket_access" {
  bucket = aws_s3_bucket.project_bucket.id

  block_public_acls       = true
  block_public_policy     = true
  ignore_public_acls      = true
  restrict_public_buckets = true
}

resource "aws_s3_bucket_versioning" "project_bucket_versioning" {
  bucket = aws_s3_bucket.project_bucket.id
  versioning_configuration {
    status = "Enabled"
  }
}

resource "aws_s3_bucket_lifecycle_configuration" "project_bucket_lifecycle" {
  bucket = aws_s3_bucket.project_bucket.id

  rule {
    id     = "move to IA"
    status = "Enabled"
    transition {
      days          = 30
      storage_class = "STANDARD_IA"
    }
  }

  rule {
    id     = "move to glacier"
    status = "Enabled"
    transition {
      days          = 35
      storage_class = "DEEP_ARCHIVE"
    }
  }

  rule {
    id     = "delete after 10 days"
    status = "Enabled"
    expiration {
      days = 40
    }
  }
}

#-----------------------------------------------------------
#-----------------------------------------------------------

resource "aws_iam_policy" "app_policy" {
  name        = "app_policy"
  path        = "/"
  description = "Policy for application servers"

  policy = jsonencode({
    Version = "2012-10-17"
    Statement = [
      {
        Action = [
          "s3:GetObject",
        ]
        Effect   = "Allow"
        Resource = "${aws_s3_bucket.project_bucket.arn}/*"
      },
      {
        Action = [
          "s3:PutObject",
        ]
        Effect   = "Allow"
        Resource = "${aws_s3_bucket.project_bucket.arn}/*"
      }
    ]
  })
}

resource "aws_iam_policy" "lambda_policy" {
  name        = "lambda_policy"
  path        = "/"
  description = "Policy for lambda function"

  policy = jsonencode({
    Version = "2012-10-17"
    Statement = [
      {
        Action = [
          "ecs:RunTask",
        ]
        Effect   = "Allow"
        Resource = "*"
      },
      {
        Action = [
          "iam:PassRole",
        ]
        Effect   = "Allow"
        Resource = "*"
      }
    ]
  })
}


resource "aws_iam_policy" "worker_policy" {
  name        = "worker_policy"
  path        = "/"
  description = "Policy for background_workers"

  policy = jsonencode({
    Version = "2012-10-17"
    Statement = [
      {
        Action = [
          "s3:PutObject",
        ]
        Effect   = "Allow"
        Resource = "${aws_s3_bucket.project_bucket.arn}/*"
      },
    ]
  })
}

resource "aws_iam_role" "app_server_role" {
  name = "app_server_role"

  assume_role_policy = jsonencode({
    Version = "2012-10-17"
    Statement = [
      {
        Action = "sts:AssumeRole"
        Effect = "Allow"
        Sid    = ""
        Principal = {
          Service = "ec2.amazonaws.com"
        }
      },
    ]
  })

  tags = {
    Project = var.project_tag_name
  }
}

resource "aws_iam_role" "lambda_function_role" {
  name = "lambda_function_role"

  assume_role_policy = jsonencode({
    Version = "2012-10-17"
    Statement = [
      {
        Action = "sts:AssumeRole"
        Effect = "Allow"
        Sid    = ""
        Principal = {
          Service = "lambda.amazonaws.com"
        }
      },
    ]
  })

  tags = {
    Project = var.project_tag_name
  }
}

resource "aws_iam_role" "ecs_task_execution_role" {
  name = "ecs_task_execution_role"

  assume_role_policy = jsonencode({
    Version = "2012-10-17"
    Statement = [
      {
        Action = "sts:AssumeRole"
        Effect = "Allow"
        Sid    = ""
        Principal = {
          Service = "ecs-tasks.amazonaws.com"
        }
      },
    ]
  })
  tags = {
    Project = var.project_tag_name
  }
}

resource "aws_iam_role" "background_workers_role" {
  name = "background_workers_role"

  assume_role_policy = jsonencode({
    Version = "2012-10-17"
    Statement = [
      {
        Action = "sts:AssumeRole"
        Effect = "Allow"
        Sid    = ""
        Principal = {
          Service = "ecs-tasks.amazonaws.com"
        }
      },
    ]
  })

  tags = {
    Project = var.project_tag_name
  }
}

resource "aws_iam_role_policy_attachment" "app_server_attachment" {
  role       = aws_iam_role.app_server_role.name
  policy_arn = aws_iam_policy.app_policy.arn
}

resource "aws_iam_role_policy_attachment" "lambda_function_attachment" {
  role       = aws_iam_role.lambda_function_role.name
  policy_arn = aws_iam_policy.lambda_policy.arn
}

resource "aws_iam_role_policy_attachment" "task_execution_attachment" {
  role       = aws_iam_role.ecs_task_execution_role.name
  policy_arn = "arn:aws:iam::aws:policy/service-role/AmazonECSTaskExecutionRolePolicy"
}

resource "aws_iam_role_policy_attachment" "background_worker_attachment" {
  role       = aws_iam_role.background_workers_role.name
  policy_arn = aws_iam_policy.worker_policy.arn
}

resource "aws_iam_instance_profile" "app_instance_profile" {
  name = "app_instance_profile"
  role = aws_iam_role.app_server_role.name
}

#-----------------------------------------------------------------
#-----------------------------------------------------------------
resource "aws_launch_template" "app_server_launch_template" {
  name = "app_server_launch_template"

  #be able to stop/terminate the instance from the console
  disable_api_stop        = false
  disable_api_termination = false

  iam_instance_profile {
    name = aws_iam_instance_profile.app_instance_profile.name
  }

  image_id = "ami-0f3caa1cf4417e51b"

  instance_initiated_shutdown_behavior = "terminate"

  instance_type = var.instance_type

  key_name = "book-app-key" # you need to create this keypair

  metadata_options {
    http_endpoint               = "enabled"
    http_tokens                 = "required"
    http_put_response_hop_limit = 1
    instance_metadata_tags      = "enabled"
    http_protocol_ipv6          = "disabled"
  }

  monitoring {
    enabled = true
  }

  vpc_security_group_ids = [aws_security_group.app_servers.id]

  user_data = base64encode(
    templatefile("${path.module}/app_server.sh.tpl", {
      db_username = var.db_username
      db_password = var.db_master_password
      db_endpoint = aws_db_instance.rds_instance.address
      db_name     = "project_db"
    })
  )

  tag_specifications {
    resource_type = "instance"
    tags = {
      Name    = "Book-App-Server"
      Project = var.project_tag_name
    }
  }
}

#-----------------------------------------------------------------
#-----------------------------------------------------------------
#Project Key-Pair

resource "aws_key_pair" "project_key_pair" {
  key_name   = "book-app-key"
  public_key = file("~/.ssh/book-app-key.pub")

  tags = {
    Project = var.project_tag_name
  }
}




#-----------------------------------------------------------------
#-----------------------------------------------------------------
#Auto scale group

resource "aws_autoscaling_group" "project_ASG" {
  name                      = "project_ASG"
  max_size                  = 4
  min_size                  = 2
  health_check_grace_period = 300
  health_check_type         = "ELB"
  desired_capacity          = 2
  force_delete              = true
  vpc_zone_identifier       = [aws_subnet.private1.id, aws_subnet.private2.id]

  launch_template {
    id      = aws_launch_template.app_server_launch_template.id
    version = "$Latest"
  }

  tag {
    key                 = "Name"
    value               = "Project_ASG"
    propagate_at_launch = true
  }

  tag {
    key                 = "Project"
    value               = var.project_tag_name
    propagate_at_launch = true
  }
}

#-----------------------------------------------------------------
#-----------------------------------------------------------------
#Target Group

resource "aws_lb_target_group" "Project_Target_Group" {
  name     = "Project-Target-Group"
  port     = 3000
  protocol = "HTTP"
  vpc_id   = aws_vpc.main.id

  health_check {
    path = "/"
    port = "3000"
  }
}

#-----------------------------------------------------------------
#-----------------------------------------------------------------
#Applicaton Load Balancer

resource "aws_lb" "Project_Load_Balancer" {
  name               = "Project-Load-Balancer"
  internal           = false
  load_balancer_type = "application"
  security_groups    = [aws_security_group.public_entry.id]
  subnets            = [aws_subnet.public1.id, aws_subnet.public2.id]

  enable_deletion_protection = false

  tags = {
    Project = var.project_tag_name
  }
}

#-----------------------------------------------------------------
#-----------------------------------------------------------------
#Load Balancer Listener

resource "aws_lb_listener" "Project_Listener" {
  load_balancer_arn = aws_lb.Project_Load_Balancer.arn
  port              = 80
  protocol          = "HTTP"

  default_action {
    type             = "forward"
    target_group_arn = aws_lb_target_group.Project_Target_Group.arn
  }
}

#-----------------------------------------------------------------
#-----------------------------------------------------------------
#Connect Auto Scaling Group to Target Group

resource "aws_autoscaling_attachment" "project_attachment" {
  autoscaling_group_name = aws_autoscaling_group.project_ASG.name
  lb_target_group_arn    = aws_lb_target_group.Project_Target_Group.arn
}

#-----------------------------------------------------------------
#-----------------------------------------------------------------
#Scaling Policies

resource "aws_autoscaling_policy" "project_policy" {
  autoscaling_group_name = aws_autoscaling_group.project_ASG.name
  name                   = "project_policy"
  policy_type            = "TargetTrackingScaling"
  target_tracking_configuration {
    predefined_metric_specification {
      predefined_metric_type = "ASGAverageCPUUtilization"
    }
    target_value = 80.0
  }
}

#-----------------------------------------------------------------
#-----------------------------------------------------------------
#Lambda

# Package the Lambda function code
data "archive_file" "lambda_file" {
  type        = "zip"
  source_file = "${path.module}/lambda/start_worker.js"
  output_path = "${path.module}/lambda/function.zip"
}

# Lambda function
resource "aws_lambda_function" "project_lambda_function" {
  filename      = data.archive_file.lambda_file.output_path
  function_name = "project_lambda_function"
  role          = aws_iam_role.lambda_function_role.arn
  handler       = "start_worker.handler"
  code_sha256   = data.archive_file.lambda_file.output_base64sha256

  runtime = "nodejs20.x"

  tags = {
    Project = var.project_tag_name
  }
}

#-----------------------------------------------------------------
#-----------------------------------------------------------------
#ECS Cluster

resource "aws_ecs_cluster" "project_ecs_cluster" {
  name = "project-ecs-cluster"

  setting {
    name  = "containerInsights"
    value = "enabled"
  }

  tags = {
    Project = var.project_tag_name
  }
}

resource "aws_ecs_task_definition" "book_report_worker" {
  family                   = "book_report_worker"
  requires_compatibilities = ["FARGATE"]
  network_mode             = "awsvpc"
  cpu                      = 256
  memory                   = 512
  execution_role_arn       = aws_iam_role.ecs_task_execution_role.arn
  task_role_arn            = aws_iam_role.background_workers_role.arn
  container_definitions = jsonencode([
    {
      name      = "report-worker"
      image     = "150168148126.dkr.ecr.us-east-1.amazonaws.com/aws_project_background_worker:latest"
      essential = true
    },
  ])

  tags = {
    Project = var.project_tag_name
  }
}

resource "aws_ecr_repository" "aws_project_background_worker" {
  name                 = "aws_project_background_worker"
  image_tag_mutability = "MUTABLE"

  tags = {
    Project = var.project_tag_name
  }
}

#-----------------------------------------------------------------
#-----------------------------------------------------------------
#RDS

resource "aws_db_subnet_group" "project_subnet_group1" {
  name       = "project_subnet_group1"
  subnet_ids = [aws_subnet.private1.id, aws_subnet.private2.id]

  tags = {
    Project = var.project_tag_name
  }
}

resource "aws_db_instance" "rds_instance" {
  db_name                 = "project_db"
  storage_type            = "gp2"
  allocated_storage       = 20
  backup_retention_period = 1
  identifier              = "db-project-cluster"
  instance_class          = "db.t3.micro"
  engine                  = "postgres"
  publicly_accessible     = false
  db_subnet_group_name    = aws_db_subnet_group.project_subnet_group1.name
  vpc_security_group_ids  = [aws_security_group.database.id]
  username                = var.db_username
  password                = var.db_master_password
  deletion_protection     = false
  skip_final_snapshot     = true
}

#-----------------------------------------------------------------
#-----------------------------------------------------------------
#CloudWatch

resource "aws_cloudwatch_metric_alarm" "ec2_cpu" {
  alarm_name                = "ec2_cpu"
  comparison_operator       = "GreaterThanOrEqualToThreshold"
  period                    = 60
  evaluation_periods        = 2
  metric_name               = "CPUUtilization"
  namespace                 = "AWS/EC2"
  statistic                 = "Average"
  threshold                 = 80
  alarm_description         = "This metric monitors ec2 cpu utilization"
  insufficient_data_actions = []
  dimensions = {
    AutoScalingGroupName = aws_autoscaling_group.project_ASG.name
  }

  tags = {
    Project = var.project_tag_name
  }
}
